Fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body, html {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 :root {
   --main-content-width: 1370px;
   --main-padding-section: 50px;
